<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:layout_weight="1.0">
        <TextView android:textColor="#ff6699ff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_name" />
        <TextView android:id="@id/file_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
        <TextView android:textColor="#ff6699ff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_size" />
        <TextView android:id="@id/file_size" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
        <TextView android:textColor="#ff6699ff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_lastmodified" />
        <TextView android:id="@id/file_lastmodified" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
        <TextView android:textColor="#ff6699ff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_contents" />
        <TextView android:id="@id/file_contents" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="" />
    </LinearLayout>
</LinearLayout>