<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/file_path" android:background="#ff0099ff" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/ll_bottom" android:layout_below="@id/file_path" />
    <TableLayout android:id="@id/ll_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:stretchColumns="0,1,2" android:layout_alignParentBottom="true">
        <TableRow android:layout_width="fill_parent">
            <Button android:gravity="center" android:id="@id/file_createdir" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_create" />
            <Button android:gravity="center" android:id="@id/paste" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_paste" />
            <Button android:gravity="center" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cancel" />
        </TableRow>
    </TableLayout>
</RelativeLayout>