<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/relative_go_back" android:background="#ff0099ff" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/relative_path" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/tv_current" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tv_current" />
            <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/file_path" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/tv_current" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relative_back" android:background="@drawable/go_back_state" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/relative_path">
            <ImageView android:id="@id/iv_go_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@drawable/go_back" />
            <TextView android:textSize="15.0sp" android:textColor="@color/black" android:id="@id/tv_go_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/tv_go_back" android:layout_toRightOf="@id/iv_go_back" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relative_divider" android:background="@drawable/divider_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/relative_back" />
    </RelativeLayout>
    <ListView android:id="@android:id/list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/relative_btn" android:layout_below="@id/relative_go_back" />
    <RelativeLayout android:id="@id/relative_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/iv_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider_bg" android:scaleType="fitXY" />
        <LinearLayout android:orientation="horizontal" android:id="@id/linear_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/iv_divider">
            <Button android:textSize="20.0sp" android:id="@id/create_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_create" android:layout_weight="1.0" />
            <Button android:textSize="20.0sp" android:id="@id/save_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/file_save" android:layout_weight="1.0" />
            <Button android:textSize="20.0sp" android:id="@id/exit_btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/file_exit" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>